tests/baselines/reference/objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2(strict=true).errors.txt
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(6,31): error TS2322: Type 'null' is not assignable to type 'B<T, U>'.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(6,31): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(10,31): error TS2322: Type 'null' is not assignable to type 'C<T, U>'.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(10,31): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(14,31): error TS2322: Type 'null' is not assignable to type 'D<T, U>'.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(14,31): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(28,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(29,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(32,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(33,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(36,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(37,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(40,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(41,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(44,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(45,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(48,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(49,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(52,10): error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(53,10): error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(56,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(57,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(60,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(61,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(64,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(65,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(68,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(69,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(72,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(73,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(76,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(77,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(80,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(81,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(84,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts(85,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericConstructSignaturesDifferingByConstraints2.ts (36 errors) ====
    // Two call or construct signatures are considered identical when they have the same number of type parameters and, considering those 
    // parameters pairwise identical, have identical type parameter constraints, identical number of parameters with identical kind(required, 
    // optional or rest) and types, and identical return types.
    
    class B<T extends U, U extends Array<number>> {
        constructor(x: T, y: U) { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'B<T, U>'.
                                  ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    
    class C<T extends U, U extends String> {
        constructor(x: T, y: U) { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'C<T, U>'.
                                  ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    
    class D<T extends U, U extends Number> {
        constructor(x: T, y: U) { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'D<T, U>'.
                                  ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    
    interface I<T extends U, U extends Number> {
        new(x: T, y: U): string;
    }
    
    interface I2 {
        new<T extends U, U extends Boolean>(x: T, y: U): string;
    }
    
    var a: { new<T extends U, U extends Array<string>>(x: T, y: U): string }
    var b = { new<T extends U, U extends RegExp>(x: T, y: U) { return ''; } }; // not a construct signature, function called new
    
    function foo1b(x: B<Array<number>, Array<number>>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<Array<number>, Array<number>>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<String, String>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<String, String>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<Number, Number>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<Number, Number>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5c(x: C<String, String>);
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: D<Number, Number>); // ok
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: any) { }
    
    function foo6c(x: C<String, String>);
             ~~~~~
!!! error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6c(x: D<any, Number>); // ok
             ~~~~~
!!! error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6c(x: any) { }
    
    function foo8(x: B<Array<number>, Array<number>>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<Number, Number>); // ok
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<Array<number>, Array<number>>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<String, String>); // error, types are structurally equal
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<Array<number>, Array<number>>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<Array<number>, Array<number>>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<Number, Number>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<String, String>); // ok
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<String, String>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<Number, Number>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<Number, Number>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }